# git-branch-manager

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  bin.js  index.d.ts  index.js  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: cli.rs  commands.ts  console.ts  git.rs  git.ts  index.ts  lib.rs  log.ts  selectBranchUi.tsx  util.rs
